[gd_scene load_steps=2 format=3 uid="uid://b6livj02whjwx"]

[ext_resource type="Script" uid="uid://citpry175poin" path="res://RPSPopup.gd" id="1_2fj4v"]

[node name="RPSPopup" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fj4v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PromptLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ResultLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RockButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Rock"

[node name="PaperButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Paper"

[node name="ScissorsButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Scissors"
